WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
CLOSED FIXED
39784
[Qt] REGRESSION(
r59837
): Incorrect clipping of TransparencyLayers
https://bugs.webkit.org/show_bug.cgi?id=39784
Summary
[Qt] REGRESSION(r59837): Incorrect clipping of TransparencyLayers
Andreas Kling
Reported
2010-05-26 14:12:56 PDT
This change:
http://trac.webkit.org/changeset/59837
Introduced a clipping bug that can be seen here:
http://andreaskling.com/r59837/
Attachments
Proposed patch
(1.89 KB, patch)
2010-05-26 14:19 PDT
,
Andreas Kling
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Andreas Kling
Comment 1
2010-05-26 14:19:17 PDT
Created
attachment 57135
[details]
Proposed patch This patch fixes the regression and doesn't break
http://panic.com/transmit/
(unlike a full revert.) I'm not sure this is 100% correct though, needs some eyeing over.
Kenneth Rohde Christiansen
Comment 2
2010-05-28 06:19:17 PDT
Comment on
attachment 57135
[details]
Proposed patch I am not 100% certain either, but the earlier code was working so far and this fixes the part that wasn't working, so it should be fine. r=me.
WebKit Commit Bot
Comment 3
2010-05-28 08:23:34 PDT
Comment on
attachment 57135
[details]
Proposed patch Clearing flags on attachment: 57135 Committed
r60360
: <
http://trac.webkit.org/changeset/60360
>
WebKit Commit Bot
Comment 4
2010-05-28 08:23:41 PDT
All reviewed patches have been landed. Closing bug.
Simon Hausmann
Comment 5
2010-05-29 14:44:04 PDT
Revision
r60360
cherry-picked into qtwebkit-2.0 with commit 4114cde5d6116333343fe87e4cd5e63c1a9c59de
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug